<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.movie.MovieDetailActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/ic_favorite_border"
        android:backgroundTint="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.detail.DetailMoviesActivity" >

            <FrameLayout
                android:id="@+id/fl_img"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_poster_big"
                    android:layout_width="match_parent"
                    android:layout_height="235dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </ImageView>

            </FrameLayout>
            <io.github.florent37.shapeofview.shapes.RoundRectView
                android:id="@+id/rounded"
                android:layout_width="90dp"
                android:layout_height="130dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:elevation="4dp"
                app:shape_roundRect_bottomLeftRadius="5dp"
                app:shape_roundRect_bottomRightRadius="5dp"
                app:shape_roundRect_topLeftRadius="5dp"
                app:shape_roundRect_topRightRadius="5dp">
            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/poster" />

            </io.github.florent37.shapeofview.shapes.RoundRectView>

            <TextView
                android:id="@+id/tv_item_title"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rounded"
                app:layout_constraintTop_toTopOf="@+id/rounded"
                tools:text="Title" />
            <TextView
                android:id="@+id/tv_item_release"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="2dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rounded"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
                tools:ignore="RtlSymmetry"
                tools:text="Release"/>

            <TextView
                android:id="@+id/tv_item_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="2dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rounded"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_release"
                tools:ignore="RtlSymmetry"
                tools:text="rating"/>

            <TextView
                android:id="@+id/tv_item_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="2dp"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rounded"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_rating"
                tools:ignore="RtlSymmetry"
                tools:text="Duration"/>

            <TextView
                android:id="@+id/title_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/overview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fl_img"
                tools:text="Actor" />
            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:padding="4dp"
                android:textSize="14sp"
                android:justificationMode="inter_word"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_overview"
                tools:text="Overview"
                tools:targetApi="o" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>